refactor(session): adjusts minor code-writing details